productsDropDown. fix z-index issue with search bar

--- a/src/components/header/productsDropDown/productsDropDown.module.scss
+++ b/src/components/header/productsDropDown/productsDropDown.module.scss
@@ -6,6 +6,7 @@
   position: absolute;
   top: 65px;
   right: 345px;
+  z-index: 5;
 
   .linkItem {
     padding: 10px;
